# cubesnake

./: .gitignore  CMakeLists.txt  README.md
examples/: cube444_0.txt  cube444_00.txt  cube444_1.txt  cube444_11.txt  cube444_21.txt  cube444_31.txt  cube444_33.txt
examples/cube333/: cube333_1.txt  cube333_2.txt  cube333_3.txt  log.txt
examples/cube444/: cube444_22.txt  cube444_23.txt  cube444_32.txt
src/: area.h  brick.cxx  brick.h  chain.h  cubesnake.cxx  cubesnake.h  cubesnake_version.h.in  file_reader.h  logger.h  main.cxx  tree.h
test/: test_area.cxx  test_brick.cxx  test_chain_1.txt  test_file_reader.cxx  test_tree.cxx
